--- a/docker_compose/storages.yaml
+++ b/docker_compose/storages.yaml
@@ -7,9 +7,22 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
     env_file:
      - ../.env
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    env_file:
+     - ../.env
+    ports:
+      - "${PGADMIN_PORT}:80"
+    volumes:
+     - pgadmin_data:/var/lib/pgadmin
 
 volumes:
-  postgres_data:
+  pg_data:
+  pgadmin_data:
